# diwodo-demo

./: .gitignore  Pipfile  README.md  project.json  pyproject.toml  snippets.md
.github/workflows/: pep8.yaml
deploy/: app.yaml  index.yaml  main.py  requirements.txt
deploy/ai/: __init__.py  anthropic.py
deploy/ai/contexts/: scriptor_docs.txt
deploy/html/: index.html  template.html  todo_add.html  todo_add_success.html  viur_base.html
deploy/html/sites/: about.html  gettingstarted.html  immobilien.html
deploy/modules/: __init__.py  facility.py  file.py  index.py  todo.py  user.py
deploy/render/: __init__.py
deploy/skeletons/: facility.py  todo.py  user.py
sources/: gulpfile.js  package.json
sources/app/: .env.development  .eslintrc.cjs  .prettierrc.json  README.md  index.html  package-lock.json  package.json  vite.config.js
sources/app/src/: App.vue  main.js  shoelaceConfig.js
sources/app/src/components/: ToDoList.vue  UserBar.vue
sources/app/src/components/table/: ToDoListCell.vue
sources/app/src/router/: index.js
sources/app/src/stores/: app.js
sources/app/src/style/: style.css  variables.css
sources/app/src/views/: HomeView.vue  LoginView.vue
sources/less/: style.less
sources/less/foundation/: appconf.less
sources/site/: .env.production  index.html  main.js  package-lock.json  package.json  postcss.config.js  shoelaceConfig.js  vite.config.js
sources/site/scripts/: main.js
sources/site/styles/: config.css  landing.css  style.css
sources/site/vue/components/: TodoAddForm.vue  TodoAddFormLayout.vue
